[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://src/enemy/debug.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 56 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
movement_speed = 100
jump_height = 256
jump_time = 0.5
fall_gravity_modifier = 1.35

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.752941, 0, 0, 1 )
polygon = PoolVector2Array( -32, -56, 32, -56, 32, 56, -32, 56 )

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="JumpRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -128 )
collision_mask = 8

[node name="FallRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 64 )
collision_mask = 8

[node name="DirectionPivot" type="Node2D" parent="."]

[node name="ProjectilePosition" type="Position2D" parent="DirectionPivot"]
position = Vector2( 56, 0 )
__meta__ = {
"_gizmo_extents_": 25.0
}

[node name="MovementCooldown" type="Timer" parent="."]
one_shot = true

[node name="Debug" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="FacingDirection" type="Line2D" parent="Debug"]
points = PoolVector2Array( 40, -24, 72, -24 )

[connection signal="timeout" from="MovementCooldown" to="." method="_on_MovementCooldown_timeout"]
